--- a/res/drawable/shape.xml
+++ b/res/drawable/shape.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners android:radius="6px" />
-    <solid
-        android:color="#66BFFF"/>
+    <corners
+        android:topRightRadius="15px"
+        android:topLeftRadius="15px"
+        android:bottomLeftRadius="0px"
+        android:bottomRightRadius="0px"/>
+    <gradient
+        android:angle="90"
+        android:endColor="#3DB4FF"
+        android:startColor="#0085BB"
+        android:type="linear" />
    
 
 </shape>
