--- a/res/layout/day_list_element.xml
+++ b/res/layout/day_list_element.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="5dp"
-    android:orientation="vertical" >
+    android:layout_height="300dp"
+    android:orientation="vertical"
+    android:padding="5dp" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,16 +25,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lesson_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/lesson"
         android:orientation="vertical" >
-
-        <ListView
-            android:id="@+id/lesson_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </ListView>
 
     </LinearLayout>
 
