--- a/res/layout/calendar_element.xml
+++ b/res/layout/calendar_element.xml
@@ -3,19 +3,20 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical" 
-    android:background="@drawable/calendar_selector">
+    android:background="@drawable/calendar_selector" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/calendar_element_text"
-            android:layout_width="60dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:padding="10dp"
-            android:text="12"
+            android:text="1"
             android:textColor="#ffffff"
             android:textSize="30dp" />
 
