--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
 	<color name="white">#FFFFFF</color>    
 	<color name="theme_green">#2ECC71</color>
-	<color name="theme_blue">#2ECC71</color>
+	<color name="theme_blue">#34495E</color>
 </resources>
