--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -13,7 +13,8 @@
     </style>
 
     <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
+    <style name="AppTheme" parent="Theme.Base.AppCompat.Light">
+        <item name="android:background">@android:color/white</item>
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
