--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity" >
+<android.support.v4.widget.DrawerLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:background="@android:color/white"
+
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -11,5 +12,13 @@
         android:layout_height="match_parent" >
 
     </FrameLayout>
+    
+     <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="290dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white"
+        android:choiceMode="singleChoice" />
 
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
