--- a/res/layout/calendar_element.xml
+++ b/res/layout/calendar_element.xml
@@ -1,25 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" 
-    android:background="@drawable/calendar_selector" >
+<RelativeLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/calendar_selector"
+    android:layout_width="60dp"
+    android:layout_height="60dp"
+  
+    android:orientation="vertical" >
+    
+    <View 
+        android:visibility="visible"
+        android:id="@+id/calendar_left_indicator"
+        android:layout_width="5dp"
+        android:layout_height="match_parent"
+        android:background="@color/theme_green"
+        android:layout_alignParentLeft="true"/>
 
-    <LinearLayout
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
+     <View 
+        android:visibility="visible"
+        android:id="@+id/calendar_right_indicator"         
+        android:layout_width="5dp"
+        android:layout_height="match_parent"
+        android:background="@color/theme_green"
+        android:layout_alignParentRight="true"/>
+     
+      <View 
+        android:id="@+id/calendar_top_indicator"          
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@color/theme_green"
+        android:layout_alignParentTop="true"/>
 
-        <TextView
-            android:id="@+id/calendar_element_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:padding="10dp"
-            android:text="1"
-            android:textColor="#ffffff"
-            android:textSize="30dp" />
+      <View 
+        android:id="@+id/calendar_bottom_indicator"          
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@color/theme_green"
+        android:layout_alignParentBottom="true"/>      
+      
+    <TextView
+        android:id="@+id/calendar_element_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:padding="10dp"
+        android:text="1"
+        android:textColor="#ffffff"
+        android:textSize="30dp" />
 
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
