--- a/res/layout/timetable_fragment.xml
+++ b/res/layout/timetable_fragment.xml
@@ -4,11 +4,84 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <LinearLayout
+            android:gravity="left"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="10dp"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/lesson_current_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="6 ноября"
+                android:textSize="20dp" />
+            
+           <TextView
+                android:id="@+id/lesson_current_day_of_week"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Среда"
+                android:textSize="20dp" />
+
+        </LinearLayout>
+
+          <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:padding="10dp"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/lesson_selected_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="7 ноября"
+                android:textSize="20dp" />
+            
+           <TextView
+                android:id="@+id/lesson_selected_day_of_week"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Четверг"
+                android:textSize="20dp" />
+
+        </LinearLayout>
+        
+        
+    </LinearLayout>
+
     <com.meetme.android.horizontallistview.HorizontalListView
-        android:id="@+id/lessonList"
+        android:id="@+id/calendar_list"
 		android:choiceMode="singleChoice"
         android:layout_width="match_parent"
-        android:background="@color/theme_blue"
         android:layout_height="60dp"/>
+
+    <ListView
+        android:id="@+id/lesson_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
+    
+    <RelativeLayout 
+        android:id="@+id/lesson_epty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        
+        <TextView 
+            
+            android:text="Пар нет"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
 
 </LinearLayout>
