--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,5 +17,10 @@
         <item name="android:background">@android:color/white</item>
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+     <style name="TwoWayView">
+        <item name="android:orientation">horizontal</item>        
+    </style>
+    
 
 </resources>
