--- a/res/layout/timetable_fragment.xml
+++ b/res/layout/timetable_fragment.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+ 	xmlns:app="http://schemas.android.com/apk/res/ru.rgups.time"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,14 +63,40 @@
         
     </LinearLayout>
 
-    <com.meetme.android.horizontallistview.HorizontalListView
-        android:id="@+id/calendar_list"
-		android:choiceMode="singleChoice"
+    <RelativeLayout 
         android:layout_width="match_parent"
-        android:layout_height="60dp"/>
+        android:layout_height="wrap_content">
+        
+         <org.lucasr.twowayview.TwoWayView
+	       android:id="@+id/calendar_list"
+			android:choiceMode="singleChoice"
+	       android:layout_width="match_parent"
+	       android:divider="@color/white"
+	       android:scrollbars="horizontal"
+	      
+	       android:layout_height="60dp"
+	       android:drawSelectorOnTop="false"
+	       style="@style/TwoWayView"
+	       tools:context=".MainActivity"/>
+
+         <ru.rgups.time.views.CalendarHint 
+             android:id="@+id/calendar_list_hint"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_centerInParent="true"
+			 android:textStyle="bold"
+			 android:visibility="gone"
+			 android:textColor="@color/theme_blue"
+			 android:background="@color/theme_green"
+			 android:textSize="20sp"
+			 android:padding="10dp"/>
+        
+    </RelativeLayout>
+   
 
     <ListView
         android:id="@+id/lesson_list"
+        android:scrollbarStyle="outsideOverlay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </ListView>
