--- a/res/drawable/calendar_selector.xml
+++ b/res/drawable/calendar_selector.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android"  >
- 
-   	<item android:state_selected="true" android:state_checked="true" android:drawable="@color/theme_green"/>
-   	<item android:state_selected="true" android:state_checked="false" android:drawable="@color/theme_green"/>
-   	
-    
-	<item android:state_focused="true"  android:drawable="@color/theme_green"></item>
-	<item android:state_focused="false" android:drawable="@color/theme_blue"></item>
-	
-	<item android:drawable="@color/theme_blue"/>
-
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_activated="true" android:drawable="@color/theme_green" />
+    <item android:drawable="@android:color/transparent" />
 </selector>
