--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -15,6 +15,8 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="Theme.Base.AppCompat.Light">
         <item name="android:background">@android:color/white</item>
+        <item name="android:activatedBackgroundIndicator">@drawable/calendar_selector</item>
+        
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     
