--- a/res/layout/setting_fragment.xml
+++ b/res/layout/setting_fragment.xml
@@ -26,13 +26,14 @@
 			android:textColor="@color/white" />
         
     </LinearLayout>
-    
-    <Button 
-        android:layout_marginTop="5dp"
+
+    <Button
+        android:id="@+id/setting_logout_button"
+        style="@style/AppButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/theme_green"
-        android:textColor="@android:color/white"
-        android:text="@string/setting_logout"/>
+        android:layout_gravity="bottom"
+        android:layout_marginTop="5dp"
+        android:text="@string/setting_logout" />
 
 </LinearLayout>
