--- a/res/layout/timetable_fragment.xml
+++ b/res/layout/timetable_fragment.xml
@@ -37,14 +37,19 @@
 			 android:padding="10dp"/>
         
     </RelativeLayout>
-   
 
-    <ListView
+    <View
+        android:id="@+id/view1"
+        android:layout_width="wrap_content"
+        android:layout_height="5dp"
+        android:background="@color/white" />
+
+    <se.emilsjolander.stickylistheaders.StickyListHeadersListView
         android:id="@+id/lesson_list"
         android:scrollbarStyle="outsideOverlay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
-    </ListView>
+    </se.emilsjolander.stickylistheaders.StickyListHeadersListView>
     
     <RelativeLayout 
         android:id="@+id/lesson_epty_view"
