--- a/res/layout/lesson_list_element.xml
+++ b/res/layout/lesson_list_element.xml
@@ -29,6 +29,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lesson_room_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
@@ -52,6 +53,8 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lesson_teacher_container"
+        
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
