--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,4 +3,5 @@
 	<color name="white">#FFFFFF</color>    
 	<color name="theme_green">#2ECC71</color>
 	<color name="theme_blue">#34495E</color>
+	<color name="bg_grey">#E5E5E5</color>
 </resources>
