--- a/res/layout/single_lesson_information_element.xml
+++ b/res/layout/single_lesson_information_element.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="10dp"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -28,7 +29,7 @@
                     android:src="@drawable/ic_person" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/single_information_teacher"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -55,7 +56,7 @@
                     android:src="@drawable/ic_pencil" />
 
                 <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/single_information_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -83,7 +84,7 @@
         		     android:src="@drawable/ic_place" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/single_information_room"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
