--- a/res/layout/homework_fragment.xml
+++ b/res/layout/homework_fragment.xml
@@ -18,17 +18,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/button1"
-            style="@style/AppButton"
+        <GridView
+            android:id="@+id/home_work_grid_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/ic_content_new_attachment"
-            android:text="Добавить изображения" />
-
-        <GridView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            
+            android:numColumns="2" >
         </GridView>
 
     </LinearLayout>
