--- a/res/layout/single_lesson_fragment.xml
+++ b/res/layout/single_lesson_fragment.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Информатика"
+        android:gravity="center_horizontal"
         android:textColor="@color/theme_green"
         android:textSize="25sp"
         android:textStyle="bold" />
@@ -23,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:textColor="@color/theme_green"
         android:text="8.20 - 9.50"
@@ -35,15 +37,32 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp"
         android:orientation="vertical" >
- 
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/single_lesson_hw_button"
-        android:text="Домашнее задание"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/AppButton"
-		android:orientation="vertical" />
 
 </LinearLayout>
+
+   <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Домашнии задания"
+        android:gravity="center_horizontal"
+        android:textColor="@color/theme_green"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:orientation="vertical" >
+
+        <ListView
+            android:id="@+id/single_lesson_home_work_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </ListView>
+
+    </LinearLayout>
+
+</LinearLayout>
+    
