--- a/res/layout/single_lesson_information_element.xml
+++ b/res/layout/single_lesson_information_element.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/white_background"
         android:orientation="vertical"
+        android:layout_marginBottom="10dp"
         android:padding="5dp" >
 
         <LinearLayout
