--- a/res/layout/homework_fragment.xml
+++ b/res/layout/homework_fragment.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/home_work_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10" >
