--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -25,6 +25,12 @@
         android:visible="false"
 		android:title="@string/action_add_image"    
 		sabd:showAsAction="always"/>
+    
+    <item 
+        android:id="@+id/action_save"
+        android:title="@string/action_save"
+        android:visible="false"
+        sabd:showAsAction="always"/>
      
 
 </menu>
