--- a/res/layout/home_work_list_element.xml
+++ b/res/layout/home_work_list_element.xml
@@ -2,22 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="3dp"
+    android:layout_marginBottom="3dp"
     android:background="@drawable/calendar_list_selector"
-    android:orientation="horizontal" >
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/home_work_list_element_text"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="17sp"
-        android:text="TextView" />
+        android:padding="3dp" >
 
-    <CheckBox
-        android:id="@+id/home_work_list_element_check_box"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0" />
+        <TextView
+            android:id="@+id/home_work_list_element_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView"
+            android:textSize="17sp" />
+
+        <CheckBox
+            android:id="@+id/home_work_list_element_check_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/theme_blue" />
 
 </LinearLayout>
