--- a/res/layout/lesson_list_divier.xml
+++ b/res/layout/lesson_list_divier.xml
@@ -2,16 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#66BFFF"
+    android:background="@color/theme_blue"
     android:orientation="vertical"
     android:padding="5dp" >
 
     <TextView
-        android:id="@+id/dayOfWeek"
+        android:id="@+id/divider_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Понедельник"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/theme_green"
         android:textSize="15sp"
         android:textStyle="bold" />
 
