--- a/res/layout/homework_list_elemetn.xml
+++ b/res/layout/homework_list_elemetn.xml
@@ -1,39 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp"
-    android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/homework_list_element_lesson_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="17sp"
-        android:layout_marginBottom="5dp"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/homework_list_element_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="10dp" >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical" >
 
         <TextView
+            android:id="@+id/homework_list_element_lesson_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/photo_count" />
+            android:layout_marginBottom="5dp"
+            android:text="TextView"
+            android:textSize="17sp" />
 
         <TextView
-            android:id="@+id/homework_list_element_photo_count"
+            android:id="@+id/homework_list_element_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/photo_count" />
+
+            <TextView
+                android:id="@+id/homework_list_element_photo_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0" />
+        </LinearLayout>
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" >
+
+        <CheckBox
+            android:id="@+id/lesson_list_element_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+
+    </RelativeLayout>
 
 </LinearLayout>
