--- a/res/layout/single_lesson_fragment.xml
+++ b/res/layout/single_lesson_fragment.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"
         android:background="@color/theme_blue"
         android:orientation="vertical"
+        android:paddingBottom="20dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="20dp" >
