base timetable fragment and lesson indicator

--- a/res/layout/homework_list_elemetn.xml
+++ b/res/layout/homework_list_elemetn.xml
@@ -50,6 +50,7 @@
             android:id="@+id/lesson_list_element_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:focusable="false"
             android:layout_centerInParent="true" />
 
     </RelativeLayout>
