--- a/res/layout/calendar_element.xml
+++ b/res/layout/calendar_element.xml
@@ -59,12 +59,26 @@
         android:textColor="@color/theme_blue"
         android:textSize="10sp" />
 
-    <ImageView
+    
+    
+    <RelativeLayout
         android:id="@+id/calendar_element_homework_indicator"
         android:layout_width="15dp"
         android:layout_height="20dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:src="@drawable/bookmark" />
-
+        android:orientation="horizontal"
+        android:background="@drawable/bookmark">
+    
+     <TextView
+         android:id="@+id/lesson_indicator_text"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="2"
+         android:layout_centerInParent="true"
+         android:textColor="@android:color/white"
+         android:textSize="7sp" />
+        
+    </RelativeLayout>
+  
 </RelativeLayout>
