--- a/res/layout/lesson_list_element.xml
+++ b/res/layout/lesson_list_element.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout 
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="wrap_content" >
+
     <LinearLayout 
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
@@ -110,9 +110,9 @@
         android:layout_width="30dp"
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
+		android:layout_centerVertical="true"
         android:layout_marginRight="15dp"
-        android:src="@drawable/bookmark" />
+        android:src="@drawable/ic_homerk" />
 
 </RelativeLayout>
 
