--- a/res/layout/timetable_fragment.xml
+++ b/res/layout/timetable_fragment.xml
@@ -46,7 +46,7 @@
     </se.emilsjolander.stickylistheaders.StickyListHeadersListView>
     
     <RelativeLayout 
-        android:id="@+id/lesson_epty_view"
+        android:id="@+id/lesson_list_empty_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         
