--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,4 +4,5 @@
 	<color name="theme_green">#2ECC71</color>
 	<color name="theme_blue">#34495E</color>
 	<color name="bg_grey">#E5E5E5</color>
+	<color name="red">#FF0000</color>
 </resources>
