lesson free indication 1

--- a/res/layout/calendar_element.xml
+++ b/res/layout/calendar_element.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -68,6 +69,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:background="@drawable/bookmark">
     
      <TextView
