--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -15,7 +15,14 @@
    limitations under the License.
 -->
 
+
+
 <resources>
+            
+    <declare-styleable name="CalendarAttr">
+            <attr name="lesson_free_state" format="boolean"/>
+    </declare-styleable>
+    
     <declare-styleable name="TwoWayView">
 
         <!-- Imported from View -->
